fixed overflow on mobile

--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+
 html,
 body {
     margin: 0;
@@ -26,16 +33,16 @@ body {
 
 
 .color-picker {
-    min-width: 71px;
-    min-height: 42px;
+    width: 71px;
+    height: 42px;
     margin: 0;
     border: 0.5px solid #D1D5DB;
     border-radius: 4px;
 }
 
 select {
-    min-width: 312px;
-    min-height: 42px;
+    width: 312px;
+    height: 42px;
     border-radius: 6px;
     background-color: #1F2937;
     color: #D5D4D8;
@@ -45,6 +52,7 @@ select {
 }
 
 .get-scheme-btn {
+    padding: 10px 15px;
     border-radius: 4px;
     border: none;
     cursor: pointer;
